match vanilla color sets fixed for single instance reset color for single instance limited to color sets and not single colors reset single instance now updates bindings maximize tooltip added

--- a/Recolor/UI/src/mods/lang/en-US.json
+++ b/Recolor/UI/src/mods/lang/en-US.json
@@ -2,15 +2,18 @@
   "Options.SECTION[Recolor.Recolor.Mod]": "Recolor",
   "Recolor.SECTION_TITLE[InfoRowTitle]": "Recolor",
   "Recolor.TOOLTIP_DESCRIPTION[InfoRowTooltip]": "For choosing custom colors.",
-  "Recolor.SECTION_TITLE[Channel0]": "Channel0",
-  "Recolor.SECTION_TITLE[Channel1]": "Channel1",
-  "Recolor.SECTION_TITLE[Channel2]": "Channel2",
-  "Recolor.SECTION_TITLE[Reset]": "Reset Colors",
-  "Recolor.TOOLTIP_DESCRIPTION[Reset]": "Resets and saves the colors back to the original colors for this asset (and season, if applicable).",
-  "Recolor.SECTION_TITLE[Save]": "Save Seasonal Colors",
-  "Recolor.TOOLTIP_DESCRIPTION[Save]": "Saves the colors for this season and asset to an XML file located in a folder at %AppData%\\LocalLow\\Colossal Order\\Cities Skylines II \\ModsData\\Recolor \\ColorData\\ Triggers a color refresh on all assets of the same type.",
+  "Recolor.SECTION_TITLE[ColorSet]": "Color Set",
+  "Recolor.TOOLTIP_DESCRIPTION[Minimize]": "Minimize the Recolor panel to save space.",
+  "Recolor.TOOLTIP_DESCRIPTION[Expand]": "Expands the Recolor panel for use.",
+  "Recolor.TOOLTIP_DESCRIPTION[ColorPicker]": "Activates the color picker / painter tool.",
+  "Recolor.TOOLTIP_DESCRIPTION[CopyColor]": "Copy a single color to paste later.",
+  "Recolor.TOOLTIP_DESCRIPTION[PasteColor]": "Paste a single color as part of a color set.",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetColor]": "Reset a single color and saves the color back to the original color for this asset (and season, if applicable).",
+  "Recolor.TOOLTIP_DESCRIPTION[CopyColorSet]": "Copy the whole color set to paste later.",
+  "Recolor.TOOLTIP_DESCRIPTION[PasteColorSet]": "Paste the copied color set.",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetColorSet]": "Reset the whole color set and saves the colors back to the original colors for this asset (and season, if applicable).",
   "Recolor.TOOLTIP_TITLE[SingleInstance]": "Single Instance",
-  "Recolor.TOOLTIP_DESCRIPTION[SingleInstance]": "Change the colors of the current selection only.",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleInstance]": "Change the colors of the current selection only. Does not work on plants and trees.",
   "Recolor.TOOLTIP_TITLE[Matching]": "Matching",
-  "Recolor.TOOLTIP_DESCRIPTION[Matching]": "Change the colors of all matching assets with same season and color variation. Single Instance will override this for that instance."
+  "Recolor.TOOLTIP_DESCRIPTION[Matching]": "Change the colors of all matching assets with same color variation (and season, if applicable). Single Instance will override this for that instance."
 }
