--- a/Recolor/UI/src/mods/lang/en-US.json
+++ b/Recolor/UI/src/mods/lang/en-US.json
@@ -5,7 +5,7 @@
   "Recolor.SECTION_TITLE[ColorSet]": "Color Set",
   "Recolor.TOOLTIP_DESCRIPTION[Minimize]": "Minimize the Recolor panel to save space.",
   "Recolor.TOOLTIP_DESCRIPTION[Expand]": "Expands the Recolor panel for use.",
-  "Recolor.TOOLTIP_DESCRIPTION[ColorPicker]": "Activates the color picker / painter tool.",
+  "Recolor.TOOLTIP_DESCRIPTION[ColorPicker]": "Activates the color picker tool.",
   "Recolor.TOOLTIP_DESCRIPTION[CopyColor]": "Copy a single color to paste later.",
   "Recolor.TOOLTIP_DESCRIPTION[PasteColor]": "Paste a single color as part of a color set.",
   "Recolor.TOOLTIP_DESCRIPTION[ResetColor]": "Reset a single color and saves the color back to the original color for this asset (and season, if applicable).",
@@ -13,7 +13,7 @@
   "Recolor.TOOLTIP_DESCRIPTION[PasteColorSet]": "Paste the copied color set.",
   "Recolor.TOOLTIP_DESCRIPTION[ResetColorSet]": "Reset the whole color set and saves the colors back to the original colors for this asset (and season, if applicable).",
   "Recolor.TOOLTIP_TITLE[SingleInstance]": "Single Instance",
-  "Recolor.TOOLTIP_DESCRIPTION[SingleInstance]": "Change the colors of the current selection only. Does not work on plants and trees.",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleInstance]": "Change the colors of the current selection only.",
   "Recolor.TOOLTIP_TITLE[Matching]": "Matching",
   "Recolor.TOOLTIP_DESCRIPTION[Matching]": "Change the colors of all matching assets with same color variation (and season, if applicable). Single Instance will override this for that instance."
 }
