--- a/Recolor/UI/src/mods/lang/en-US.json
+++ b/Recolor/UI/src/mods/lang/en-US.json
@@ -13,6 +13,7 @@
   "Recolor.TOOLTIP_DESCRIPTION[CopyColorSet]": "Copy the whole color set to paste later.",
   "Recolor.TOOLTIP_DESCRIPTION[PasteColorSet]": "Paste the copied color set.",
   "Recolor.TOOLTIP_DESCRIPTION[ResetColorSet]": "Reset the whole color set and saves the colors back to the original colors for this asset (and season, if applicable).",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetInstanceColor]": "Resets the instance colors and this instance will return to utilizing its color variation.",
   "Recolor.TOOLTIP_TITLE[SingleInstance]": "Single Instance",
   "Recolor.TOOLTIP_DESCRIPTION[SingleInstance]": "Change the colors of the current selection only.",
   "Recolor.TOOLTIP_TITLE[Matching]": "Matching Color Variation",
