--- a/Recolor/UI/src/mods/lang/en-US.json
+++ b/Recolor/UI/src/mods/lang/en-US.json
@@ -29,12 +29,35 @@
   "Recolor.TOOLTIP_DESCRIPTION[DecreaseRadius]": "Decrease the radius.",
   "Recolor.SECTION_TITLE[Radius]": "Radius",
   "Recolor.SECTION_TITLE[Filter]": "Filter",
-  "Recolor.TOOLTIP_TITLE[AllFilters]": "Toggle all Filters on/off",
-  "Recolor.TOOLTIP_DESCRIPTION[AllFilters]": "Either selects all or none of the Filters depending on your current selection. Having none selected will prevent the Bulldoze Tool from working.",
   "Recolor.TOOLTIP_TITLE[BuildingFilter]": "Building Filter",
-  "Recolor.TOOLTIP_DESCRIPTION[BuildingFilter]": "Toggling this off will prevent the Color Painter tool from chaning single instance colors of buildings.",
+  "Recolor.TOOLTIP_DESCRIPTION[BuildingFilter]": "Color Painter tool will change single instance colors of buildings.",
   "Recolor.TOOLTIP_TITLE[PropFilter]": "Prop Filter",
-  "Recolor.TOOLTIP_DESCRIPTION[PropFilter]": "Toggling this off will prevent the Color Painter tool from chaning single instance colors of props.",
+  "Recolor.TOOLTIP_DESCRIPTION[PropFilter]": "Color Painter tool will change single instance colors of props.",
   "Recolor.TOOLTIP_TITLE[VehicleFilter]": "Vehicle Filter",
-  "Recolor.TOOLTIP_DESCRIPTION[VehicleFilter]": "Toggling this off will prevent the Color Painter tool from chaning single instance colors of vehicles."
+  "Recolor.TOOLTIP_DESCRIPTION[VehicleFilter]": "Color Painter tool will change single instance colors of vehicles.",
+  "Recolor.TOOLTIP_TITLE[PaintToolMode]": "Paint",
+  "Recolor.TOOLTIP_DESCRIPTION[PaintToolMode]": "Changes single instance colors or matching color variations on a selection.",
+  "Recolor.TOOLTIP_TITLE[ResetToolMode]": "Reset",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetToolMode]": "Resets single instance colors back to color variation or custom color variations back to originals.",
+  "Recolor.TOOLTIP_TITLE[PickerToolMode]": "Color Picker",
+  "Recolor.TOOLTIP_DESCRIPTION[PickerToolMode]": "Color picker within the painter tool.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ColorPainterAutomaticCopyColor]": "Automatically Copy Color Set when activating Color Painter",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ColorPainterAutomaticCopyColor]": "Copies and pastes the set of three colors from the selected asset whenever color painter is activated from the selected info panel button.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetSettings]": "Reset Recolor Settings",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetSettings]": "Upon confirmation this will reset all settings for Recolor mod.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetSettings]": "Reset Recolor Settings?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.Version]": "Version",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.Version]": "Version number for the Recolor mod installed.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "Reset All Single Instance Color Changes",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "Upon confirmation resets all instance colors in this save file.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "Reset All Single Instance Color Changes?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "Reset Color Variations in this Save Game",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "Upon confirmation removes all saved color variations from this save file.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "Reset Color Variations in this Save Game?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "Delete ModsData Saved Color Variations",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "Upon confirmation deletes all saved files in ModsData related to this mod.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "Delete ModsData Saved Color Variations?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.SafelyRemove]": "Safely Remove Recolor",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.SafelyRemove]": "Upon confirmation this will remove all components and entities from the Recolor mod. Resets all instance colors in this save file, remove all saved color variations from this save file, and delete all saved files in ModsData related to this mod.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.SafelyRemove]": "Safely Remove Recolor?"
 }
