--- a/Recolor/UI/src/mods/lang/en-US.json
+++ b/Recolor/UI/src/mods/lang/en-US.json
@@ -36,7 +36,7 @@
   "Recolor.TOOLTIP_TITLE[VehicleFilter]": "Vehicle Filter",
   "Recolor.TOOLTIP_DESCRIPTION[VehicleFilter]": "Color Painter tool will change single instance colors of vehicles.",
   "Recolor.TOOLTIP_TITLE[PaintToolMode]": "Paint",
-  "Recolor.TOOLTIP_DESCRIPTION[PaintToolMode]": "Changes single instance colors or matching color variations on a selection.",
+  "Recolor.TOOLTIP_DESCRIPTION[PaintToolMode]": "Left Click: Changes single instance colors or matching color variations on a selection. Right Click: Resets single instance colors back to color variation or custom color variations back to originals.",
   "Recolor.TOOLTIP_TITLE[ResetToolMode]": "Reset",
   "Recolor.TOOLTIP_DESCRIPTION[ResetToolMode]": "Resets single instance colors back to color variation or custom color variations back to originals.",
   "Recolor.TOOLTIP_TITLE[PickerToolMode]": "Color Picker",
