--- a/Recolor/lang/zh-HANS.json
+++ b/Recolor/lang/zh-HANS.json
@@ -1,6 +1,6 @@
 {
   "Options.SECTION[Recolor.Recolor.Mod]": "Recolor",
-  "Recolor.SECTION_TITLE[InfoRowTitle]": "Recolor",
+  "Recolor.SECTION_TITLE[InfoRowTitle]": "调整颜色",
   "Recolor.TOOLTIP_DESCRIPTION[InfoRowTooltip]": "用于更改资产的颜色。",
   "Recolor.SECTION_TITLE[ColorSet]": "颜色设定",
   "Recolor.TOOLTIP_DESCRIPTION[Minimize]": "最小化 Recolor 模组的面板以节省空间。",
@@ -8,16 +8,65 @@
   "Recolor.TOOLTIP_DESCRIPTION[ColorPicker]": "激活颜色选择工具。",
   "Recolor.TOOLTIP_DESCRIPTION[ColorPainter]": "激活颜色绘制工具。",
   "Recolor.TOOLTIP_DESCRIPTION[CopyColor]": "复制一种颜色以便稍后粘贴。",
+  "Recolor.TOOLTIP_DESCRIPTION[PasteColor]": "粘贴刚刚复制的颜色作为颜色集的一部分。",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetColor]": "重置选中实例的颜色至原始颜色（和季节，如果适用的话）。",
+  "Recolor.TOOLTIP_DESCRIPTION[CopyColorSet]": "复制整个颜色设定集以便稍后粘贴。",
+  "Recolor.TOOLTIP_DESCRIPTION[PasteColorSet]": "粘贴刚刚复制的颜色集。",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetColorSet]": "重置选中资产的整个颜色集至原始颜色（和季节，如果适用的话）。",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetInstanceColor]": "重置该资产的颜色至原始颜色。",
+  "Recolor.TOOLTIP_DESCRIPTION[SaveToDisk]": "将该颜色集保存到 ModsData 文件夹并设为默认颜色，以便可以在其他存档中使用。",
+  "Recolor.TOOLTIP_DESCRIPTION[RemoveFromDisk]": "从 ModsData 文件夹中删除已保存的颜色集，以便同时从所有存档中删除。",
+  "Recolor.TOOLTIP_TITLE[SingleInstance]": "单一实例",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleInstance]": "仅更改当前选中资产的颜色。",
+  "Recolor.TOOLTIP_TITLE[Matching]": "相同的颜色变体",
+  "Recolor.TOOLTIP_DESCRIPTION[Matching]": "更改具有相同网格、颜色变体（和季节，如果适用的话）的所有资产的颜色。使用“单一实例”选项更改颜色将会覆盖该资产。",
+  "Recolor.SECTION_TITLE[Selection]": "选择方式",
+  "Recolor.TOOLTIP_TITLE[SingleSelection]": "单个",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleSelection]": "更改单个建筑物、摆件或载具的颜色。",
+  "Recolor.TOOLTIP_TITLE[RadiusSelection]": "半径选择",
+  "Recolor.TOOLTIP_DESCRIPTION[RadiusSelection]": "改变半径内建筑物、摆件和/或载具的单一实例颜色。",
+  "Recolor.TOOLTIP_DESCRIPTION[IncreaseRadius]": "增大半径",
+  "Recolor.TOOLTIP_DESCRIPTION[DecreaseRadius]": "减小半径",
   "Recolor.SECTION_TITLE[Radius]": "半径",
   "Recolor.SECTION_TITLE[Filter]": "过滤器",
   "Recolor.TOOLTIP_TITLE[BuildingFilter]": "建筑过滤器",
+  "Recolor.TOOLTIP_DESCRIPTION[BuildingFilter]": "启用此选项后，颜色绘制工具将只改变建筑物的颜色。",
   "Recolor.TOOLTIP_TITLE[PropFilter]": "摆件过滤器",
+  "Recolor.TOOLTIP_DESCRIPTION[PropFilter]": "启用此选项后，颜色绘制工具将只改变摆件的颜色。",
   "Recolor.TOOLTIP_TITLE[VehicleFilter]": "车辆过滤器",
+  "Recolor.TOOLTIP_DESCRIPTION[VehicleFilter]": "启用此选项后，颜色绘制工具将只改变载具的颜色。",
+  "Recolor.TOOLTIP_TITLE[PaintToolMode]": "上色",
+  "Recolor.TOOLTIP_DESCRIPTION[PaintToolMode]": "左键单击：更改单一实例或相同的颜色变体的颜色。 右键单击​​：将单一实例或相同的颜色变体重置为该资产的原始颜色。",
   "Recolor.TOOLTIP_TITLE[ResetToolMode]": "重置",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetToolMode]": "将单一实例或相同的颜色变体的颜色重置为该资产的原始颜色。",
   "Recolor.TOOLTIP_TITLE[PickerToolMode]": "颜色选择器",
+  "Recolor.TOOLTIP_DESCRIPTION[PickerToolMode]": "颜色绘制工具中的颜色选择工具。",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ColorPainterAutomaticCopyColor]": "打开颜色绘制工具时自动复制颜色集。",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ColorPainterAutomaticCopyColor]": "启用此选项后，当从选定资产的信息面板打开颜色绘制工具时，就会自动复制并粘贴该资产的颜色集。",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetSettings]": "重置 Recolor 设置",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetSettings]": "确认后，将会重置 Recolor 模组的全部设置。",
   "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetSettings]": "确定重置 Recolor 设置？",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.Version]": "版本",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.Version]": "已安装的 Recolor 版本号。",
-  "Options.INPUT_MAP[Recolor.Recolor.Mod]": "Recolor"
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "重置所有单一实例的颜色变化",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "确认后将重置此存档中的所有实例的颜色。",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "确定要重置所有单一实例的颜色吗?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "重置该存档中所有的颜色集",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "确认后将会从存档中删除所有已保存的颜色集。",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "确定要重置该存档中所有的颜色集吗?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "删除 ModsData 文件夹中保存的颜色集",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "确认后将删除与这个模组相关的 ModsData 文件夹中所有已保存的文件。",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "确定要删除 ModsData 文件夹中保存的颜色集吗?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.SafelyRemove]": "安全移除 Recolor 模组",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.SafelyRemove]": "确认后，将删除 Recolor 模组中所有的组件和实体、重置此存档中所有实例的颜色、删除此存档中保存的所有颜色集，并删除与此模组相关的 ModsData 文件夹中保存的所有文件。",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.SafelyRemove]": "确定要安全移除 Recolor 模组吗?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "颜色绘制工具的快捷键",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "打开颜色绘制工具的快捷键。",
+  "Options.INPUT_MAP[Recolor.Recolor.Mod]": "Recolor",
+  "Options.OPTION[Recolor.Recolor.Mod/ActivateColorPainter/binding]": "打开颜色绘制工具的快捷键",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "重置 Recolor 模组的快捷键设置",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "确认后，将会重置 Recolor 模组的快捷键设置。",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "确定要重置 Recolor 模组的快捷键设置吗?",
+  "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "目前不支持更改植物的单一实例颜色。",
+  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "无法更改该资产的颜色，因为它有自定义的实例颜色。"
 }
