updated localization changelog and description

--- a/Recolor/lang/de-DE.json
+++ b/Recolor/lang/de-DE.json
@@ -12,5 +12,61 @@
   "Recolor.TOOLTIP_DESCRIPTION[ResetColor]": "Setzt eine einzelne Farbe des Originalen Assets auf das Original zurück (und Saison, falls zutreffend).",
   "Recolor.TOOLTIP_DESCRIPTION[CopyColorSet]": "Das ganze Farbset kopieren, um es später einzufügen.",
   "Recolor.TOOLTIP_DESCRIPTION[PasteColorSet]": "Das kopierte Farbset einfügen.",
-  "Recolor.TOOLTIP_DESCRIPTION[ResetColorSet]": "Setzt das ganze Farbset des Originalen Assets auf das Original zurück (und Saison, falls zutreffend)."
+  "Recolor.TOOLTIP_DESCRIPTION[ResetColorSet]": "Setzt das ganze Farbset des Originalen Assets auf das Original zurück (und Saison, falls zutreffend).",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetInstanceColor]": "Setzt die Farben der Instanz zurück und benutzt wieder ihre eigene Farbvariation.",
+  "Recolor.TOOLTIP_DESCRIPTION[SaveToDisk]": "Speichert die Farbvariation in den ModsData Ordner, damit sie als Standard für alle Karten verwendet werden kann.",
+  "Recolor.TOOLTIP_DESCRIPTION[RemoveFromDisk]": "Löscht die Farbvariation in dem ModsData Ordner, damit sie nicht mehr als Standard für alle Karten verwendet wird.",
+  "Recolor.TOOLTIP_TITLE[SingleInstance]": "Einzelne Instanz",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleInstance]": "Ändert nur die Farbe der aktuellen Auswahl.",
+  "Recolor.TOOLTIP_TITLE[Matching]": "Übereinstimmende Farbvariation",
+  "Recolor.TOOLTIP_DESCRIPTION[Matching]": "Ändert die Farben aller Assets mit demselben mesh, Farbvariation (und Saison, falls zutreffend). Einzelne Instanz überschreibt dies nur für diese Instanz.",
+  "Recolor.SECTION_TITLE[Selection]": "Auswahl",
+  "Recolor.TOOLTIP_TITLE[SingleSelection]": "Einzeln",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleSelection]": "Ändert die Farben eines Gebäudes, einer Requisite oder eines Fahrzeuges.",
+  "Recolor.TOOLTIP_TITLE[RadiusSelection]": "Radius-Auswahl",
+  "Recolor.TOOLTIP_DESCRIPTION[RadiusSelection]": "Ändert die Einzelinstanzfarben von Gebäuden, Requisiten und/oder Fahrzeugen im Radius.",
+  "Recolor.TOOLTIP_DESCRIPTION[IncreaseRadius]": "Radius erhöhen.",
+  "Recolor.TOOLTIP_DESCRIPTION[DecreaseRadius]": "Radius verringern.",
+  "Recolor.SECTION_TITLE[Radius]": "Radius",
+  "Recolor.SECTION_TITLE[Filter]": "Filter",
+  "Recolor.TOOLTIP_TITLE[BuildingFilter]": "Gebäudefilter",
+  "Recolor.TOOLTIP_DESCRIPTION[BuildingFilter]": "Das Farbmaler-Werkzeug ändert die Einzelinstanzfarben von Gebäuden.",
+  "Recolor.TOOLTIP_TITLE[PropFilter]": "Requisitenfilter",
+  "Recolor.TOOLTIP_DESCRIPTION[PropFilter]": "Das Farbmaler-Werkzeug ändert die Einzelinstanzfarben von Requisiten.",
+  "Recolor.TOOLTIP_TITLE[VehicleFilter]": "Fahrzeugfilter",
+  "Recolor.TOOLTIP_DESCRIPTION[VehicleFilter]": "Das Farbmaler-Werkzeug ändert die Einzelinstanzfarben von Fahrzeugen.",
+  "Recolor.TOOLTIP_TITLE[PaintToolMode]": "Malen",
+  "Recolor.TOOLTIP_DESCRIPTION[PaintToolMode]": "Linksklick: Ändert einzelne Farbinstanzen oder übereinstimmende Farbvariationen einer Auswahl. Rechtsklick: Zurücksetzten.",
+  "Recolor.TOOLTIP_TITLE[ResetToolMode]": "Zurücksetzen",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetToolMode]": "Setzt einzelne Farbinstanzen auf Farbvariation zurück oder setzt benutzerdefinierte Farbvariationen zurück auf das Original.",
+  "Recolor.TOOLTIP_TITLE[PickerToolMode]": "Farbwähler",
+  "Recolor.TOOLTIP_DESCRIPTION[PickerToolMode]": "Farbwähler innerhalb des Malwerkzeugs.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ColorPainterAutomaticCopyColor]": "Farbset bei Aktivierung des Malwerkzeugs automatisch Kopieren",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ColorPainterAutomaticCopyColor]": "Kopiert und fügt das Farbset des ausgewählten Elements ein, wenn der Farbmaler über die ausgewählte Info-Taste aktiviert wird.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetSettings]": "Recolor Einstellungen zurücksetzen",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetSettings]": "Nach Bestätigung wird dies die Einstellungen für die Recolor Mod zurücksetzen.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetSettings]": "RecolorEinstellungen zurücksetzen?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.Version]": "Version",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.Version]": "Versionsnummer der Recolor Mod.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "Alle Einzelinstanz Farbänderung zurücksetzten",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "Nach Bestätigung werden alle Instanzfarben in diesem Spielstand zurückgesetzt.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "Alle Einzelinstanz Farbänderung zurücksetzten?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "Farbvariationen in diesem Spielstand zurücksetzen",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "Nach Bestätigung werden alle gespeicherten Farbvariationen aus diesem Spielstand entfernt.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "Farbvariationen in diesem Spielstand zurücksetzen?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "ModsData gespeicherte Farbvariationen löschen",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "Nach Bestätigung werden alle gespeicherten Dateien in ModsData im Zusammenhang mit dieser Mod gelöscht.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "ModsData gespeicherte Farbvariationen löschen?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.SafelyRemove]": "Recolor sicher entfernen",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.SafelyRemove]": "Nach Bestätigung wird dies alle Recolor Mod komponenten von diesem Copmputer löschen.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.SafelyRemove]": "Recolor sicher entfernen?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "Farbmaler-Werkzeug Tastenkürzel",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "Eine Tastenkombination, um das Farbmaler-Werkzeug zu aktivieren.",
+  "Options.INPUT_MAP[Recolor.Recolor.Mod]": "Recolor",
+  "Options.OPTION[Recolor.Recolor.Mod/ActivateColorPainter/binding]": "Aktivierungs-Taste für das Farbmaler-Werkzeug",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Recolor Mod Tastenbelegung zurücksetzen",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Nach Bestätigung wird dies die Tastaturkürzel für die Recolor Mod zurücksetzen.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Recolor Mod Tastenbelegung zurücksetzen?",
+  "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "Farbänderungen einzelner Instanzen für Pflanzen werden derzeit nicht unterstützt.",
+  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "Farbvariation kann hier nicht geändert werden, da es eigene Instanzfarben hat."
 }
