--- a/Recolor/lang/fr-FR.json
+++ b/Recolor/lang/fr-FR.json
@@ -36,6 +36,7 @@
   "Recolor.TOOLTIP_TITLE[VehicleFilter]": "Filtre de véhicule",
   "Recolor.TOOLTIP_DESCRIPTION[VehicleFilter]": "L'outil de peinture changera les couleurs d’instance des véhicules.",
   "Recolor.TOOLTIP_TITLE[PaintToolMode]": "Peindre",
+  "Recolor.TOOLTIP_DESCRIPTION[PaintToolMode]": "Clic gauche : Modifie les couleurs d’une instance unique ou par variation de couleurs correspondantes sur une sélection.\nClic droit : Réinitialise les couleurs d’une instance au mode par variation de couleur, ou bien les variations de couleurs personnalisées aux couleurs originales du jeu de base.",
   "Recolor.TOOLTIP_TITLE[ResetToolMode]": "Réinitialiser",
   "Recolor.TOOLTIP_DESCRIPTION[ResetToolMode]": "Réinitialise le mode de couleur d’instance au mode par correspondance de variation, ou bien les variations personnalisées par correspondance à leur jeu de couleur original.",
   "Recolor.TOOLTIP_TITLE[PickerToolMode]": "Sélecteur de couleur",
