--- a/Recolor/lang/ko-KR.json
+++ b/Recolor/lang/ko-KR.json
@@ -1,1 +1,72 @@
-{}
+{
+  "Options.SECTION[Recolor.Recolor.Mod]": "재색상(RECOLOR)",
+  "Recolor.SECTION_TITLE[InfoRowTitle]": "재색상",
+  "Recolor.TOOLTIP_DESCRIPTION[InfoRowTooltip]": "커스텀 색상을 고르려면 선택하세요",
+  "Recolor.SECTION_TITLE[ColorSet]": "색상 세트",
+  "Recolor.TOOLTIP_DESCRIPTION[Minimize]": "재색상 패널을 최소화하여 공간을 절약하세요.",
+  "Recolor.TOOLTIP_DESCRIPTION[Expand]": "재색상 패널을 사용하기 위해 확장합니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[ColorPicker]": "색상 선택 도구를 활성화합니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[ColorPainter]": "색상 그리기 도구를 활성화합니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[CopyColor]": "단일 색상을 복사하여 나중에 붙여넣습니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[PasteColor]": "색상 세트의 일부로 단일 색상을 붙여넣습니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetColor]": "단일 색상을 재설정하고 이 에셋(및 해당되는 경우 계절) 의 원래 색상으로 되돌려 저장합니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[CopyColorSet]": "전체 색상 세트를 복사하여 나중에 붙여넣습니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[PasteColorSet]": "복사한 색상 세트를 붙여넣습니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetColorSet]": "전체 색상 세트를 재설정하고 이 자산(및 해당되는 경우 계절) 의 원래 색상으로 되돌려 저장합니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetInstanceColor]": "인스턴스 색상을 재설정하면 이 인스턴스는 원래 색상 변형을 다시 적용하게 됩니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[SaveToDisk]": "색상 변형을 ModsData 폴더에 저장하여 여러 저장 파일에서 기본으로 사용할 수 있게 합니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[RemoveFromDisk]": "ModsData 폴더에서 저장된 색상 변형을 제거하여 여러 저장 파일에서 더 이상 사용되지 않도록 합니다.",
+  "Recolor.TOOLTIP_TITLE[SingleInstance]": "단일 인스턴스",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleInstance]": "현재 선택된 항목의 색상만 변경합니다.",
+  "Recolor.TOOLTIP_TITLE[Matching]": "색상 변형 맞춤",
+  "Recolor.TOOLTIP_DESCRIPTION[Matching]": "동일한 메쉬, 색상 변형 (및 해당되는 경우 계절) 을 가진 모든 자산의 색상을 변경합니다. 단일 인스턴스는 해당 인스턴스에 대해 이를 무시합니다.",
+  "Recolor.SECTION_TITLE[Selection]": "선택",
+  "Recolor.TOOLTIP_TITLE[SingleSelection]": "단일",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleSelection]": "건물, 소품 또는 차량 하나의 색상을 변경합니다.",
+  "Recolor.TOOLTIP_TITLE[RadiusSelection]": "반경 선택",
+  "Recolor.TOOLTIP_DESCRIPTION[RadiusSelection]": "반경 내에서 건물, 소품, 차량의 단일 인스턴스 색상을 변경합니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[IncreaseRadius]": "반경을 늘립니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[DecreaseRadius]": "반경을 줄입니다.",
+  "Recolor.SECTION_TITLE[Radius]": "반경",
+  "Recolor.SECTION_TITLE[Filter]": "필터",
+  "Recolor.TOOLTIP_TITLE[BuildingFilter]": "건물 필터",
+  "Recolor.TOOLTIP_DESCRIPTION[BuildingFilter]": "색상 페인터 도구는 건물의 단일 인스턴스 색상을 변경합니다.",
+  "Recolor.TOOLTIP_TITLE[PropFilter]": "프롭 필터",
+  "Recolor.TOOLTIP_DESCRIPTION[PropFilter]": "색상 페인터 도구는 소품의 단일 인스턴스 색상을 변경합니다.",
+  "Recolor.TOOLTIP_TITLE[VehicleFilter]": "차량 필터",
+  "Recolor.TOOLTIP_DESCRIPTION[VehicleFilter]": "색상 페인터 도구는 차량의 단일 인스턴스 색상을 변경합니다.",
+  "Recolor.TOOLTIP_TITLE[PaintToolMode]": "페인트",
+  "Recolor.TOOLTIP_DESCRIPTION[PaintToolMode]": "왼쪽 클릭: 선택 항목의 단일 인스턴스 색상 또는 일치하는 색상 변형을 변경합니다.\n오른쪽 클릭: 단일 인스턴스 색상을 색상 변형으로 되돌리거나 사용자 지정 색상 변형을 원래 색상으로 복원합니다.",
+  "Recolor.TOOLTIP_TITLE[ResetToolMode]": "초기화",
+  "Recolor.TOOLTIP_DESCRIPTION[ResetToolMode]": "단일 인스턴스 색상을 색상 변형으로 되돌리거나 사용자 지정 색상 변형을 원래 색상으로 복원합니다.",
+  "Recolor.TOOLTIP_TITLE[PickerToolMode]": "색상 선택기",
+  "Recolor.TOOLTIP_DESCRIPTION[PickerToolMode]": "페인터 도구 내의 색상 선택기.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ColorPainterAutomaticCopyColor]": "색상 페인터를 활성화할 때 자동으로 색상 세트를 복사합니다.",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ColorPainterAutomaticCopyColor]": "선택한 정보 패널 버튼에서 색상 페인터를 활성화할 때마다 선택한 자산의 세 가지 색상 세트를 복사하여 붙여넣습니다.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetSettings]": "재색상 설정 초기화",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetSettings]": "확인을 누르면 재색상 모드의 모든 설정이 초기화됩니다.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetSettings]": "설정을 초기화 합니까?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.Version]": "버전",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.Version]": "이 재색상 모드의 버전 번호.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "모든 단일 인스턴스 색상 변경 초기화",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "확인을 누르면 이 세이브 파일의 모든 인스턴스 색상이 초기화됩니다.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetAllSingleInstanceColorChanges]": "모든 단일 인스턴스 색상 변경을 초기화하시겠습니까?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "이 저장 게임에서 색상 변형을 초기화합니다.",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "확인을 누르면 이 세이브 파일에서 모든 저장된 색상 변형이 제거됩니다.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetColorVariationsInThisSaveGame]": "이 저장 게임에서 색상 변형을 초기화하시겠습니까?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "ModsData에 저장된 색상 변형 삭제",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "확인을 누르면 이 모드와 관련된 ModsData의 모든 저장된 파일이 삭제됩니다.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.DeleteModsDataSavedColorVariations]": "ModsData에 저장된 색상 변형을 삭제하시겠습니까?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.SafelyRemove]": "안전하게 재색상 모드 제거",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.SafelyRemove]": "확인을 누르면 재색상 모드의 모든 구성 요소와 항목이 제거됩니다. 이 저장 파일의 모든 인스턴스 색상이 초기화되고, 저장 파일의 모든 저장된 색상 변형이 제거되며, 이 모드와 관련된 ModsData의 모든 저장된 파일이 삭제됩니다.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.SafelyRemove]": "안전하게 재색상 모드를 제거하시겠습니까?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "색상 페인터 도구 키 바인드",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "색상 페인터 도구를 활성화하는 키 바인드.",
+  "Options.INPUT_MAP[Recolor.Recolor.Mod]": "재색상",
+  "Options.OPTION[Recolor.Recolor.Mod/ActivateColorPainter/binding]": "색상 페인터 도구 활성화 키",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "재색상 모드 키 바인딩 초기화",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "확인을 누르면 재색상 모드의 키 바인딩이 초기화됩니다.",
+  "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "재색상 모드의 키 바인딩을 초기화하시겠습니까?",
+  "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "식물의 단일 인스턴스 색상 변경은 현재 지원되지 않습니다.",
+  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "이 항목은 사용자 지정 인스턴스 색상을 가지고 있어 색상을 변경할 수 없습니다."
+}
