--- a/Recolor/UI/src/mods/lang/en-US.json
+++ b/Recolor/UI/src/mods/lang/en-US.json
@@ -62,8 +62,8 @@
   "Options.WARNING[Recolor.Recolor.Mod.Setting.SafelyRemove]": "Safely Remove Recolor?",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "Color Painter Tool Keybind",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "A keybind to activate the color painter tool.",
-  "Options.OPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Fence Selector Mode",
-  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Hold these keys down to select net lane fences.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Activate NetLane Fence/Hedge Selector Mode",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Keyboard shortcut to activate the tool mode to select net lane fences and hedges.",
   "Options.INPUT_MAP[Recolor.Recolor.Mod]": "Recolor",
   "Options.OPTION[Recolor.Recolor.Mod/ActivateColorPainter/binding]": "Color Painter Tool Activation key",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Reset Recolor mod Keybindings",
@@ -71,5 +71,5 @@
   "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Reset Recolor mod Keybindings?",
   "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "Single instance color changes for plants is not currently supported.",
   "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "Cannot change color variation on this because it has custom instance colors.",
-  "Recolor.MOUSE_TOOLTIP[SelectANetLaneFence]": "Select a NetLane Fence."
+  "Recolor.MOUSE_TOOLTIP[SelectANetLaneFence]": "Select a NetLane Fence or Hedge."
 }
