Implemented Hexadecimal input

--- a/Recolor/UI/src/mods/lang/en-US.json
+++ b/Recolor/UI/src/mods/lang/en-US.json
@@ -72,5 +72,6 @@
   "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "Single instance color changes for plants is not currently supported.",
   "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "Cannot change color variation on this because it has custom instance colors.",
   "Recolor.MOUSE_TOOLTIP[SelectANetLaneFence]": "Select a NetLane Fence or Hedge.",
-  "Recolor.TOOLTIP_DESCRIPTION[ToggleChannel]": "Toggles the channel on or off."
+  "Recolor.TOOLTIP_DESCRIPTION[ToggleChannel]": "Toggles the channel on or off.",
+  "Recolor.TOOLTIP_DESCRIPTION[ShowHexaDecimals]": "Toggles whether Hexadecimal input fields are shown or not."
 }
